fixed error && x-overflow

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@
         scrollbar-width: none;  /* Firefox */
   }
 }
+
+html, body {
+    overflow-x: hidden;
+  }
